<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/radio_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_sdcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdcard"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_blutooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blutooth"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_wifiradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifiradio"
        android:onClick="onRadioButtonClicked"/>

</RadioGroup>
