<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/device_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/device_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:title="@string/app_name"/>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Used to set BLE scanning and connection related parameters -->
        <LinearLayout
            android:id="@+id/ble_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/scan_setting"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/set_ble_scan_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/set_ble_scan_mac_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_mac"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/set_ble_scan_uuid_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_uuid"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp" />

            <Switch
                android:id="@+id/set_ble_auto_reconnect_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/setting_auto_reconnect"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/device_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/device_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




        <FrameLayout
            android:id="@+id/fragment_con"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"/>

</androidx.drawerlayout.widget.DrawerLayout>
