<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_margin="16dp"
        android:text="@string/winfi_config"
        android:alpha="0.9"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:id="@+id/wifi_ssid"
        android:textStyle="italic"
        android:layout_margin="16dp"
        android:hint="@string/ssid"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>



    <EditText
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:id="@+id/wifi_password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_ssid"/>



    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif"
        android:text="Done"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/wifi_password"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif"
        android:text="Cancel"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_password"
        app:layout_constraintEnd_toStartOf="@+id/done"/>





</androidx.constraintlayout.widget.ConstraintLayout>