<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_bg"
    android:orientation="vertical"
    android:layout_marginEnd="24dp"
    android:paddingTop="1dp">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3A6281"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menuWifiConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/popupBackgroundColor"
        android:fontFamily="@font/ubuntu_m"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/menu_item_wifi_config"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/menuSelectSource"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menuSelectSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:background="@color/popupBackgroundColor"
        android:fontFamily="@font/ubuntu_m"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/menu_item_select_source"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/menuAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/menuWifiConfig"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menuAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:background="@color/popupBackgroundColor"
        android:fontFamily="@font/ubuntu_m"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/menu_item_about"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/menuSelectSource"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="menuWifiConfig,menuSelectSource, menuAbout"
        tools:layout_editor_absoluteX="160dp" />

</androidx.constraintlayout.widget.ConstraintLayout>